--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -8,4 +9,26 @@ body {
   display: grid;
   height: 100vh;
   place-items: center;
+  background-image: url('images/game-title.jpg');
+  background-size: cover;
+  background-position: center;
+  font-family: system-ui, sans-serif;
+  text-align: center;
+}
+
+.itim-regular {
+  font-family: "Itim", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.btn {
+  padding: 10px;
+  font-size: 32px;
+  background: transparent;
+  border: none;
+}
+
+.btn:hover {
+  text-decoration: underline;
 }
